--- a/app/src/main/res/layout/activity_reservation_check.xml
+++ b/app/src/main/res/layout/activity_reservation_check.xml
@@ -59,7 +59,7 @@
         android:paddingVertical="3dp"
 
         android:textSize="20sp"
-        android:textColor="#C5C3C3"
+        android:textColor="#000"
         android:gravity="center_vertical"
         android:hint="- 제외"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
