--- a/app/src/main/res/layout/activity_reservate.xml
+++ b/app/src/main/res/layout/activity_reservate.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:splitMotionEvents="false"
     tools:context=".Reservate">
 
     <LinearLayout
@@ -32,24 +31,24 @@
 
             <TextView
                 android:id="@+id/textView_date"
-                android:layout_weight="4"
+                android:layout_weight="6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="2020년 10월 21일 (수)"
-                android:textSize="18sp"
+                android:autoSizeTextType="uniform"
                 android:textColor="#000"/>
 
             <ImageButton
                 android:id="@+id/select_date_bt"
-                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:onClick="onclick_date_bt"
-                android:src="@mipmap/calendar"
-                android:background="#FFF"
+                android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitCenter"/>
+                android:background="#FFF"
+                android:onClick="onclick_date_bt"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/calendar" />
 
             <TextView
                 android:layout_weight="1"
@@ -64,7 +63,7 @@
             android:layout_height="0dp"/>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal">
@@ -74,27 +73,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"/>
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@drawable/edge">
-
-                <Spinner
-                    android:id="@+id/building_spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:spinnerMode="dialog"
-                    />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:layout_weight="0.2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"/>
 
             <LinearLayout
                 android:layout_weight="1"
@@ -107,29 +85,26 @@
                     android:id="@+id/layer_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:paddingLeft="5dp"
+                    android:gravity="center"
                     android:spinnerMode="dialog"/>
 
             </LinearLayout>
 
             <TextView
-                android:layout_weight="0.1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"/>
-
-            <TextView
-                android:layout_weight="0.5"
+                android:layout_weight="1.8"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"/>
 
         </LinearLayout>
 
         <TextView
-            android:layout_weight="0.6"
+            android:layout_weight="0.4"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal">
@@ -151,6 +126,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:prompt="@string/start_time"
+                    android:paddingLeft="5dp"
+                    android:gravity="center"
                     android:spinnerMode="dialog"/>
 
             </LinearLayout>
@@ -176,6 +153,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:prompt="@string/end_time"
+                    android:paddingLeft="5dp"
+                    android:gravity="center"
                     android:spinnerMode="dialog"/>
 
             </LinearLayout>
@@ -189,11 +168,14 @@
 
             <Button
                 android:id="@+id/OK_bt"
-                android:layout_weight="0.5"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:onClick="onclick_OK"
+                android:paddingVertical="5dp"
+                android:layout_gravity="center_vertical"
                 android:text="조회"
-                android:onClick="onclick_OK"/>
+                android:textSize="15dp" />
 
         </LinearLayout>
 
@@ -215,9 +197,8 @@
         <TextView
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:layout_height="match_parent"
-            android:paddingLeft="10dp"
             android:text="회의실 이름"
             android:textColor="#000"/>
 
@@ -230,9 +211,9 @@
         <TextView
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:gravity="center"
             android:layout_height="match_parent"
-            android:paddingLeft="50dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="80dp"
             android:text="상태"
             android:textColor="#000"/>
     </LinearLayout>
