--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -30,7 +30,6 @@
         android:layout_height="40dp"
         android:text="예약가능"
         android:textSize="14sp"
-        android:paddingRight="10dp"
-        android:gravity="right"/>
+        android:gravity="center"/>
 
 </LinearLayout>
