--- a/app/src/main/res/layout/activity_reservate.xml
+++ b/app/src/main/res/layout/activity_reservate.xml
@@ -212,8 +212,7 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:paddingLeft="80dp"
+            android:gravity="center"
             android:text="상태"
             android:textColor="#000"/>
     </LinearLayout>
