--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,32 +4,29 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:src="@mipmap/ic_launcher_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
     <TextView
     android:layout_weight="1"
     android:id="@+id/name"
     android:layout_width="0dp"
-    android:layout_height="40dp"
+    android:layout_height="60dp"
+        android:paddingLeft="30dp"
     android:gravity="center_vertical"
-        android:textSize="14sp"/>
+        android:textSize="20sp"/>
 
     <TextView
-        android:layout_weight="2"
+        android:layout_weight="0.5"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:gravity="center_vertical" />
 
     <TextView
+        android:id="@+id/check_flag"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
+        android:paddingLeft="50dp"
         android:text="예약가능"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:gravity="center"/>
 
 </LinearLayout>
